--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "kewlr",
-    "version": "0.1.9",
-    "description": "Determine if two values are equal to each others",
+    "version": "0.2.0",
+    "description": "Determine if two objects are equal to each other according to a recursive equality algorithm",
     "main": "dist/kewlr.js",
     "jsnext:main": "dist/kewlr.mjs",
     "module": "dist/kewlr.mjs",
@@ -9,22 +9,14 @@
     "node",
     "nodeJS",
     "deepEqual",
-    "deep",
-    "deeper",
-    "deepest",
-    "strict",
-    "ecma",
-    "es2015",
-    "es2016",
-    "es7",
-    "loose",
-    "match",
+    "browser",
     "shallow",
     "equal",
-    "object",
     "equality",
     "compare",
-    "comparison"
+    "comparison",
+    "chai",
+    "lodash"
 ],
     "files": [
     "dist",
@@ -53,19 +45,19 @@
     "homepage": "https://github.com/zubuzon/kewlr#readme",
     "devDependencies": {
     "@types/chai": "^3.4.32",
-        "@types/mocha": "^2.2.32",
-        "@types/node": "^6.0.41",
-        "chai": "^3.5.0",
-        "codecov": "^1.0.1",
-        "coveralls": "^2.11.14",
-        "istanbul": "github:gotwarlost/istanbul#v1",
-        "mocha": "^3.1.0",
-        "deep-equal": "^1.0.1",
-        "immutable": "^3.8.1",
-        "rollup": "0.36.1",
-        "rollup-plugin-buble": "0.14.0",
-        "ts-node": "^1.3.0",
-        "tslint": "next",
-        "typescript": "next"
-}
+    "@types/mocha": "^2.2.32",
+    "@types/node": "^6.0.41",
+    "chai": "^3.5.0",
+    "codecov": "^1.0.1",
+    "coveralls": "^2.11.14",
+    "istanbul": "github:gotwarlost/istanbul#v1",
+    "mocha": "^3.1.0",
+    "deep-equal": "^1.0.1",
+    "immutable": "^3.8.1",
+    "rollup": "0.36.1",
+    "rollup-plugin-buble": "0.14.0",
+    "ts-node": "^1.3.0",
+    "tslint": "next",
+    "typescript": "next"
+  }
 }
