--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "kewlr",
-    "version": "0.2.5",
-    "description": "Determine if two objects are equal to each other according to a recursive equality algorithm",
-    "main": "dist/kewlr.js",
-    "jsnext:main": "dist/kewlr.mjs",
-    "module": "dist/kewlr.mjs",
-    "keywords": [
+  "name": "kewlr",
+  "version": "0.2.6",
+  "description": "Determine if two objects are equal to each other according to a recursive equality algorithm",
+  "main": "dist/kewlr.js",
+  "jsnext:main": "dist/kewlr.mjs",
+  "module": "dist/kewlr.mjs",
+  "keywords": [
     "node",
     "nodeJS",
     "deepEqual",
@@ -17,45 +17,55 @@
     "comparison",
     "chai",
     "lodash"
-],
-    "files": [
+  ],
+  "files": [
     "dist",
     "README.md"
-],
-    "scripts": {
-        "build": "rollup -c",
-        "benchmark": "node benchmark/index.js",
-        "test": "npm run pretest && node --harmony ./node_modules/istanbul/lib/cli.js cover --root ./build/src --report lcov --report text ./node_modules/mocha/bin/_mocha ./build/test/**/*.js",
-        "prepublish": "npm run build",
-        "prebuild": "tsc --sourceMap --skipLibCheck -t es2015",
-        "pretest": "tsc --sourceMap --skipLibCheck -t es6 --m umd -p ./tsconfig.json",
-        "lint": "tslint src/**/*.ts",
-        "watch:tests": "mocha test/specs/**/*.ts -R spec --bail --watch",
-        "watch:build": "tsc -t es5 -m es6 --skipLibCheck -p ./tsconfig.json -w"
-},
-    "repository": {
+  ],
+  "scripts": {
+    "build": "rollup -c",
+    "benchmark": "node benchmark/index.js",
+    "test": "npm run pretest && node --harmony ./node_modules/istanbul/lib/cli.js cover --root ./build/src --report lcov --report text ./node_modules/mocha/bin/_mocha ./build/test/**/*.js",
+    "test:browser": "karma start",
+    "prepublish": "npm run build",
+    "prebuild": "tsc --sourceMap --skipLibCheck -t es2015",
+    "pretest": "tsc --sourceMap --skipLibCheck -t es6 --m umd -p ./tsconfig.json",
+    "lint": "tslint src/**/*.ts",
+    "watch:tests": "mocha test/specs/**/*.ts -R spec --bail --watch",
+    "watch:build": "tsc -t es5 -m es6 --skipLibCheck -p ./tsconfig.json -w",
+  },
+  "repository": {
     "type": "git",
-        "url": "git+https://github.com/zubuzon/kewlr.git"
-},
-    "author": "ZubuZon",
-    "license": "MIT",
-    "bugs": {
+    "url": "git+https://github.com/zubuzon/kewlr.git"
+  },
+  "author": "ZubuZon",
+  "license": "MIT",
+  "bugs": {
     "url": "https://github.com/zubuzon/kewlr/issues"
-},
-    "homepage": "https://github.com/zubuzon/kewlr#readme",
-    "devDependencies": {
+  },
+  "homepage": "https://github.com/zubuzon/kewlr#readme",
+  "devDependencies": {
     "@types/chai": "^3.4.32",
     "@types/mocha": "^2.2.32",
     "@types/node": "^6.0.41",
     "chai": "^3.5.0",
     "codecov": "^1.0.1",
     "coveralls": "^2.11.14",
-    "istanbul": "github:gotwarlost/istanbul#v1",
-    "mocha": "^3.1.0",
     "deep-equal": "^1.0.1",
     "immutable": "^3.8.1",
+    "istanbul": "github:gotwarlost/istanbul#v1",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-rollup-preprocessor": "^2.0.2",
+    "karma-chai": "^0.1.0",
+    "karma-mocha-reporter": "^2.2.0",
+    "mocha": "^3.1.0",
+    "phantomjs-prebuilt": "^2.1.13",
     "rollup": "0.36.1",
     "rollup-plugin-buble": "0.14.0",
+    "rollup-plugin-typeScript": "0.8.1",
     "ts-node": "^1.3.0",
     "tslint": "next",
     "typescript": "next"
