--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "deep-equal": "^1.0.1",
     "immutable": "^3.8.1",
     "istanbul": "github:gotwarlost/istanbul#v1",
+    "karma": "^1.0.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.2.0",
@@ -65,7 +66,8 @@
     "phantomjs-prebuilt": "^2.1.13",
     "rollup": "0.36.1",
     "rollup-plugin-buble": "0.14.0",
-    "rollup-plugin-typeScript": "0.8.1",
+    "rollup-plugin-typescript": "0.8.1",
+    "rollup-plugin-multi-entry": "2.0.1",
     "ts-node": "^1.3.0",
     "tslint": "next",
     "typescript": "next"
