--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kewlr",
-  "version": "0.2.6",
-  "description": "Determine if two objects are equal to each other according to a recursive equality algorithm",
+  "version": "0.2.8",
+  "description": "Compare objects and return whether they are equal according to a recursive equality algorithm. This module is around 6 - 9% faster then similiar modules. Works for both NodejS and the browser.",
   "main": "dist/kewlr.js",
   "jsnext:main": "dist/kewlr.mjs",
   "module": "dist/kewlr.mjs",
